User Authentication and Profile Image Resizing Updated - V7

--- a/myflaskblog/templates/layout.html
+++ b/myflaskblog/templates/layout.html
@@ -34,14 +34,16 @@
                         <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
                     </div>
                     <!-- Navbar Right Side -->
-                    <div class="navbar-nav">
+                    <span class="navbar-nav">
                         {% if current_user.is_authenticated %}
+                        <span class="navbar-text">Welcome Back {{ current_user.username.capitalize() }} !</span>
                         <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                         {% else %}
                         <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                         <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
                         {% endif %}
+                    </span>
                     </div>
                 </div>
             </div>
