Create, Update, and Delete Posts Functionality Added  - V8

--- a/myflaskblog/templates/layout.html
+++ b/myflaskblog/templates/layout.html
@@ -37,6 +37,7 @@
                     <span class="navbar-nav">
                         {% if current_user.is_authenticated %}
                         <span class="navbar-text">Welcome Back {{ current_user.username.capitalize() }} !</span>
+                        <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                         <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                         {% else %}
