--- a/myflaskblog/templates/home.html
+++ b/myflaskblog/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "Layout.html" %}
+{% extends "layout.html" %}
 {% block content %}
     {% for post in posts.items %}
         <article class="media content-section">
