--- a/myflaskblog/templates/user_posts.html
+++ b/myflaskblog/templates/user_posts.html
@@ -1,4 +1,4 @@
-{% extends "Layout.html" %}
+{% extends "layout.html" %}
 {% block content %}
     <h1 class="mb-3">Posts by {{ user.username }} ({{ posts.total }})</h1>
     {% for post in posts.items %}
